# genome-mcp

./: .gitignore  .pre-commit-config.yaml  FASTMCP_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  cli.py  main.py  mcp-updated.json  mcp.json  project_config.json  pyproject.toml  requirements.txt  test_base_server.py  test_cli_old.py  test_cli_simple.py  test_fastmcp_implementation.py  test_ncbi_gene_server.py  test_new_features.py  test_output.json  test_refactor.py  test_refactor_old.py
.github/workflows/: ci-cd.yml  docs.yml  precommit.yml  publish.yml  quality.yml
docs/: API_REFERENCE.md  FASTMCP_IMPLEMENTATION.md  MCP_DEVELOPMENT_GUIDE.md  PRD.md  PROJECT_DOCUMENTATION.md  development-standards.md  first.md  next.md  project-structure-optimization.md  technical-analysis.md  uv-development-guide.md
examples/: fastmcp_example.py  usage_examples.py
scripts/: setup_precommit.py
src/: __init__.py  configuration.py
src/config/: __init__.py
src/core/: __init__.py  async_utils.py  caching.py  formatting.py
src/data/: parsers.py  validators.py
src/genome_mcp/: __init__.py  __main__.py  cli.py  configuration.py  exceptions.py  main.py
src/genome_mcp/clients/: __init__.py
src/genome_mcp/config/: __init__.py
src/genome_mcp/core/: __init__.py  async_utils.py  caching.py  formatting.py
src/genome_mcp/data/: parsers.py  validators.py
src/genome_mcp/http_utils/: __init__.py
src/genome_mcp/servers/: base.py
src/genome_mcp/servers/functional/: __init__.py
src/genome_mcp/servers/ncbi/: __init__.py  gene.py
src/genome_mcp/type_defs/: __init__.py  common.py  gene.py  variant.py
src/genome_mcp/types/: __init__.py  common.py  gene.py  variant.py
src/genome_mcp/utils/: __init__.py  core.py  http.py  parsers.py  validators.py
src/genome_mcp/utils/http/: __init__.py  (+1 more)
src/http_utils/: __init__.py
src/servers/: __init__.py  base.py
src/servers/ensembl/: __init__.py
src/servers/ncbi/: __init__.py  gene.py
src/type_defs/: __init__.py  gene.py  variant.py
tests/integration/: test_cli_old.py  test_cli_simple.py  test_mcp_local.py  test_refactor_old.py
tests/unit/: test_config.py  test_exceptions.py  test_types.py  test_utils_core.py  test_utils_http.py  test_utils_parsers.py  test_utils_validators.py
tests/unit/test_servers/: test_base_server.py
(+6 files in other folders)
