[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genome-mcp"
version = "0.1.0"
description = "Intelligent genomics data analysis tool based on Model Context Protocol"
authors = [
    {name = "Genomics MCP Team", email = "team@genomics-mcp.org"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.0.0",
    "biopython>=1.81",
    "mygene>=3.2.0",
    "myvariant>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[project.scripts]
genome-mcp = "genome_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/genomics-mcp/genome-mcp"
Documentation = "https://genome-mcp.readthedocs.io"
Repository = "https://github.com/genomics-mcp/genome-mcp"
"Bug Tracker" = "https://github.com/genomics-mcp/genome-mcp/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=genome_mcp --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
